[package]
name = "flipkart-price-bot"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "flipkart-price-bot"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["gzip", "brotli", "deflate", "cookies", "json"] }
scraper            = "0.20"
regex              = "1"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "fmt"] }
anyhow             = "1"
rand               = "0.8"
sha2               = "0.10"
hex                = "0.4"
chrono             = { version = "0.4",  features = ["serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
